syntax = "proto3";

package common;

option go_package = "github.com/kamalyes/go-rpc-gateway/pbuf/common;common";

import "google/protobuf/timestamp.proto";

// 通用状态码
enum StatusCode {
  // 成功
  OK = 0;
  // 操作被取消（通常由调用方取消）
  CANCELED = 1;
  // 未知错误
  UNKNOWN = 2;
  // 无效参数：客户端指定了无效参数
  INVALID_ARGUMENT = 3;
  // 截止时间已过：操作在完成前超时
  DEADLINE_EXCEEDED = 4;
  // 未找到：请求的实体不存在
  NOT_FOUND = 5;
  // 已存在：客户端尝试创建的实体已存在
  ALREADY_EXISTS = 6;
  // 权限被拒绝：调用方没有执行指定操作的权限
  PERMISSION_DENIED = 7;
  // 资源耗尽：某些资源已耗尽
  RESOURCE_EXHAUSTED = 8;
  // 前提条件失败：操作被拒绝，因为系统不在执行操作所需的状态
  FAILED_PRECONDITION = 9;
  // 操作被中止
  ABORTED = 10;
  // 超出范围：操作尝试超过有效范围
  OUT_OF_RANGE = 11;
  // 未实现：操作未实现或不支持
  UNIMPLEMENTED = 12;
  // 内部错误
  INTERNAL = 13;
  // 不可用：服务当前不可用
  UNAVAILABLE = 14;
  // 数据丢失：不可恢复的数据丢失或损坏
  DATA_LOSS = 15;
  // 未认证：请求没有有效的认证凭据
  UNAUTHENTICATED = 16;
}

// 通用业务状态
enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_SUCCESS = 1;
  STATUS_FAILED = 2;
  STATUS_PENDING = 3;
}

// 通用处理结果
message Result {
  // 系统错误码
  int32 code = 1;
  // 错误详细描述
  string error = 2;
  // 业务状态码
  StatusCode status = 3;
}

// 通用分页请求
message PageRequest {
  int32 page = 1;       // 页码，从1开始 @inject_tag: json:"page" validate:"min=1"
  int32 page_size = 2;  // 每页大小 @inject_tag: json:"page_size" validate:"min=1,max=100"
  string order_by = 3;  // 排序字段 @inject_tag: json:"order_by"
  bool desc = 4;        // 是否降序 @inject_tag: json:"desc"
}

// 通用分页响应
message PageResponse {
  int64 total = 1;       // 总记录数 @inject_tag: json:"total"
  int32 page = 2;        // 当前页码 @inject_tag: json:"page"
  int32 page_size = 3;   // 每页大小 @inject_tag: json:"page_size"
  int32 total_pages = 4; // 总页数 @inject_tag: json:"total_pages"
  bool has_next = 5;     // 是否有下一页 @inject_tag: json:"has_next"
  bool has_prev = 6;     // 是否有上一页 @inject_tag: json:"has_prev"
}

// 通用响应
message BaseResponse {
  Status status = 1;    // 状态 @inject_tag: json:"status"
  string message = 2;   // 消息 @inject_tag: json:"message"
  string code = 3;      // 错误码 @inject_tag: json:"code,omitempty"
}

// 通用排序结构
message Sorting {
  string field = 1;    // 排序字段 @inject_tag: json:"field"
  bool reversed = 2;   // 是否倒序 @inject_tag: json:"reversed"
}

// 时间范围
message TimeRange {
  google.protobuf.Timestamp start = 1; // 开始时间 @inject_tag: json:"start"
  google.protobuf.Timestamp end = 2;   // 结束时间 @inject_tag: json:"end"
}

// 时间戳信息
message TimestampInfo {
  google.protobuf.Timestamp created_at = 1; // 创建时间 @inject_tag: gorm:"autoCreateTime;comment:创建时间" json:"created_at"
  google.protobuf.Timestamp updated_at = 2; // 更新时间 @inject_tag: gorm:"autoUpdateTime;comment:更新时间" json:"updated_at"
  google.protobuf.Timestamp deleted_at = 3; // 删除时间 @inject_tag: gorm:"index;comment:删除时间" json:"deleted_at,omitempty"
}